--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
     /* display: none; */
     width: 250px;
     background-color: black;
-    color: yellow;
+    color: white;
     font-weight: bolder;
     margin-left: 41%;
 }
@@ -50,10 +50,11 @@ body {
     color : white;
     padding-top: 10px;
     text-align: center;
+    text-shadow: 3px 4px 5px black;
 }
 
 #states {
-    color : yellow;
+    color : white;
     background-color: black;
     font-weight: bolder;
     margin-left: 45%;
@@ -67,7 +68,7 @@ body {
 }
 
 .cdcolor {
-    background-color: goldenrod;
+    background-image: linear-gradient(to right, rgb(201, 201, 150) 0%, rgb(221, 203, 40));
 }
 
 .ftcolor {
@@ -94,5 +95,11 @@ h6 {
 
 .font-style {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    text-shadow: 3px 4px 5px yellow;
+}
+
+.ackno {
+    text-shadow: 3px 4px 5px yellow;
     font-weight: bolder;
 }
